style.css
* {
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
}

html {
    font-size: 62.5%;
}

body {
    font-size: 1.6rem;
}

a {
    text-decoration: none;
    color: black;
    cursor: poiner;
}

main .falkrum {
    margin: 10px;
    display: grid;
    grid-template-columns: minmax(300px, 6fr) 5fr;
    grid-auto-rows: 300px;
    align-items: center;
}

main .falkrum-description {
    padding: 0 25px;
}

main .falkrum-description__tittle,
main .falkrum-description__text {
    text-align: center;
}

main .falkrum-imagen {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    object-fit: contain;
}

.falkrum-description__tittle {
    color: #333;
    font-size: 3rem;
    font-weight: bolder;
    margin-bottom: 24px;
}

.falkrum-description__text {
    color: #333;
    font-size: 1.5rem;
    margin-bottom: 24px;
}

.falkrum-description__button {
    width: 100%;
    height: auto;
    display: flex;
}

.falkrum-description button {
    border: none;
    border-radius: 20px;
    color: #333;
    margin: 0 auto;
    background-color: orange;
    font-weight: bolder;
    padding: 12px 24px;
}

.canales {
    margin: 40px 0;
}

.canales-title {
    color: #333;
    font-weight: bold;
    text-align: center;
    margin-bottom: 50px;
    font-size: 2.7rem;
}

.canales-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(150px, 200px));
    grid-auto-rows: 1fr;
    gap: 10px;
    justify-content: center;
}

.canal-item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.canal-item__big {
    grid-area: 1 / 1 / 3 / 4;
}

.video {
    margin-bottom: 40px;
}

.videos-title {
    color: #333;
    font-weight: bolder;
    text-align: center;
    font-size: 2.7rem;
    margin-bottom: 50px;
}

.videos-grid {
    display: grid;
    gap: 25px;
    grid-template-columns: repeat(auto-fit, minmax(120px, 250px));
    justify-content: center;
    margin-bottom: 30px;
}

.video-item {
    background-color: rgb(60, 215, 40);
    border-top-left-radius: 30px;
    padding: 10px;
}

.video-item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/*Codigo robado para ver el efecto de el background de la imagen*/

@media screen and (max-width: 768px) {
    main .falkrum {
        grid-template-columns: minmax(300px, 1fr);
        /* background-image: url("./Recursos/Falkrum\ Tales-Logo.jpg");
        background-repeat: no-repeat;
        background-position: top;
        background-size: contain; */
    }

    /* main .falkrum-description__text,
    main .falkrum-description__tittle {
        text-align: center;
    } */

    /* .falkrum::before {
        content: '';
        position: absolute;
        width: 100%;
        height: 100%;
        background: linear-gradient(90deg, #ffffff 20%, rgba(0, 0, 0, 0));
    } */

    .falkrum img {
        display: none;
    }

    main .canales-grid {
        grid-template-columns: repeat(auto-fit, 150px);
    }


}

